--- a/app/src/main/res/layout/fragment_popular_movies.xml
+++ b/app/src/main/res/layout/fragment_popular_movies.xml
@@ -3,17 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.popularmovies.PopularMoviesFragment" >
+    tools:context=".PopularMoviesFragment" >
 
     <GridView
         android:id="@+id/movie_grid_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:columnWidth="100dp"
-        android:numColumns="auto_fit" />
+        android:columnWidth="180dp"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:gravity="center" />
 
 </FrameLayout>
