--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -5,44 +5,26 @@
     android:layout_height="match_parent"
     tools:context=".MovieDetailsFragment">
 
-    <LinearLayout android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <LinearLayout style="@style/DetailsPageMainContainer">
+        <LinearLayout style="@style/DetailsPageHeaderContainer">
+            <TextView android:id="@+id/movie_title"
+                style="@style/DetailsPageMovieTitle" />
 
-        <TextView android:id="@+id/movie_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            <TextView android:id="@+id/movie_user_rating"
+                style="@style/DetailsPageMovieUserRating"/>
+        </LinearLayout>
 
-        <LinearLayout android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            
-            <ImageView android:id="@+id/movie_poster_thumbnail"
-                android:layout_width="90dp"
-                android:layout_height="135dp" />
+        <LinearLayout style="@style/DetailsPageBody1Container">
+            <LinearLayout style="@style/DetailsPageBody1LeftContainer">
+                    <ImageView android:id="@+id/movie_poster_thumbnail"
+                        style="@style/DetailsPageMovieThumbnail"/>
 
-            <LinearLayout android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView android:id="@+id/movie_user_rating"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <TextView android:id="@+id/movie_release_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
+                    <TextView android:id="@+id/movie_release_date"
+                        style="@style/DetailsPageMovieReleaseDate"/>
             </LinearLayout>
         </LinearLayout>
 
         <TextView android:id="@+id/movie_overview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
+            style="@style/DetailsPageMovieOverview"/>
     </LinearLayout>
 </LinearLayout>
