Fix no internet issue and remove verbose logging

--- a/app/src/main/res/values/movie_details_styles.xml
+++ b/app/src/main/res/values/movie_details_styles.xml
@@ -16,7 +16,7 @@
 
     <style name="DetailsPageBodyContainer">
         <item name="android:orientation">horizontal</item>
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingTop">@dimen/movie_details_small_padding</item>
         <item name="android:paddingBottom">@dimen/movie_details_large_padding</item>
